<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.app.turtlemint.viewmodel.comment.CommentsViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/commentsLoader"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:lottie_loop="true"
                    app:lottie_speed="1"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_issue_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="start"
                    android:hint="@string/issue_title"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_issue_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="start"
                    android:hint="@string/issue_title"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@{viewModel.issueTitle}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:typeface="sans"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_issue_header" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_issue_description_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="start"
                    android:hint="@string/issue_description"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_issue_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_issue_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="start"
                    android:hint="@string/issue_description"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@{viewModel.issueDescription}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:typeface="sans"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_issue_description_header" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/see_more"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:visibility="gone"
                    android:onClick="@{()->viewModel.seeMoreClicked()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_issue_description"
                    app:layout_constraintBottom_toTopOf="@+id/tv_comments_header"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeLess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/see_less"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:visibility="gone"
                    android:onClick="@{()->viewModel.seeLessClicked()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_issue_description"
                    app:layout_constraintBottom_toTopOf="@+id/tv_comments_header"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_comments_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/comments"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSeeMore" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_comments_header"
                    app:setAdapter="@{viewModel.commentAdapter}"
                    tools:listitem="@layout/item_comments" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_no_data_found"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/no_data_found"
                    android:visibility="@{viewModel.isCommentAvailable ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_no_issues"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_comments_found"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal"
                    android:typeface="sans"
                    android:visibility="@{viewModel.isCommentAvailable ? View.VISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_no_data_found"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>